# audio-transcriber

./: .aider.chat.history.md  .gitignore  CONTRIBUTING.md  Cargo.toml  HighLevelPlan.md  README.md  refactoring.md
.temp/: .env
.zed/: settings.json
src/: config.rs  main.rs
src/audio/: mod.rs  player.rs  recorder.rs
src/state/: mod.rs
src/ui/: builder.rs  components.rs  mod.rs
