[package]
name = "voice_transcriber"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.4.1", package = "libadwaita", features = ["v1_2"] }
anyhow = "1.0"
bytemuck = "1.9"
cpal = "0.15.2"
glib = "0.17.9"
gstreamer = "0.20"
gstreamer-app = "0.20"
gstreamer-audio = "0.20"
gtk = { version = "0.6.6", package = "gtk4", features = ["v4_8"] }
hound = "3.5.0"
ogg = "0.8"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "multipart"] }
rodio = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.2"
tokio = { version = "1.28", features = ["full"] }
vorbis = "0.1"