[package]
name = "voice_transcriber"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.6", package = "gtk4" }
adw = { version = "0.4", package = "libadwaita" }
glib = "0.17"
gio = "0.17"
gstreamer = "0.20"
gstreamer-app = "0.20"
gstreamer-audio = "0.20"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
keyring = "2.0"
bytemuck = "1.13"
