
[package]
name = "voice_transcriber"
version = "0.1.0"
edition = "2021"

[dependencies]
relm4 = "0.8.1"
glib = "0.19"
gio = "0.19"
gstreamer = "0.20"
gstreamer-app = "0.20"
gstreamer-audio = "0.20"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde_json = "1.0"
hound = "3.5"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
keyring = "2.0"
bytemuck = "1.13"
tokio = { version = "1.0", features = ["full"] }
